	  before showing the credits, so that they use as much of the
	  screen as possible, and set the flags back to their original
	  values afterward.  Also, call wscrl(1) instead of scroll(),
	  only call scrollok() just before and after we scroll, and
	  tweak where screen updates occur so that messages are properly
	  displayed when they first scroll onto the bottom line of the
	  screen. (DLR)
- configure.ac:
	- Since we only use vsnprintf() now, remove the tests for
	  snprintf(). (DLR)
	- Change the description of "sufficient wide character support"
	  to "sufficient UTF-8 support", as the latter is clearer. (DLR)
- doc/faq.html:
	- Update section 4.10 to mention that pasting from the X
	  clipboard via the middle mouse button also works when the
	  Shift key is used. (DLR)
- doc/nanorc.sample:
	- Add regexes for Bourne shell scripts. (Mike Frysinger, minor
	  tweaks by DLR)
	- Explain how the "none" and "default" syntaxes work. (DLR)
- doc/man/nanorc.5:
	- Explain how the "none" and "default" syntaxes work. (DLR)
- doc/man/fr/nano.1, doc/man/fr/nanorc.5:
	- Updated translation by Jean-Philippe Guérard.
- src/Makefile.am:
	- Add text.c to nano_SOURCES. (DLR)
- THANKS:
	- Add Bulgarian and Dutch translators.

GNU nano 1.3.8 - 2005.06.30
- General:
	- Miscellaneous comment fixes. (DLR)
	- Various #include fixes.  Since proto.h includes nano.h, only
	  include the former in source files.  Also add an #include
	  guard to proto.h, and make the config.h #include in nano.h
	  match the config.h #includes everywhere else. (DLR)
	- Change all hardcoded instances of 128 bytes to MAX_BUF_SIZE,
	  and #define MAX_BUF_SIZE as 128 in nano.h. (DLR)
	- Display the key to go to the previous strings in the
	  search/replace history as "^P" instead of "Up".  This makes
	  mouse clicks work properly on it.  Changes to shortcut_init(),
	  help_init(), nanogetstr(), and do_statusbar_input(). (DLR)
	- Update the Free Software Foundation's mailing address in
	  various comments. (DLR)